@@ -343,3 +343,5 @@
   - feature: added archivedir/archivecmd to the the main logfile
   - feature: 99_Sunrise_EL.pm (does not need any Date modules)
   - bugfix:  Seldom xmllist error resulting in corrupt xml (Martin/Peter, 4.9)
+  - bugfix:  FHT mode holiday_short added (9.9, Dirk)
+  - bugfix:  Modifying a device from its own trigger crashes (Klaus, 10.9)
